@@ -29,6 +29,26 @@ func (c *MemberController) HandleCommandGetComments(comm *communication.GetComme
 	}
 }
 
+/** HandleCommandGetComments on a member controller calls the appropriate functions on a pagemanager and page so that they can maintain which members and which guests are present. */
+func (c *DomainModeratorController) HandleCommandGetComments(comm *communication.GetComments, serv *Server) {
+	serv.PageManager.MoveMemberToPage(c, comm.Url, serv)
+	if c.Page != nil {
+		c.Page.GetComments(c)
+	} else {
+		c.AddMessage(false, fmt.Sprintf("Couldn't get comments for %s", comm.Url))
+	}
+}
+
+/** HandleCommandGetComments on a member controller calls the appropriate functions on a pagemanager and page so that they can maintain which members and which guests are present. */
+func (c *GlobalModeratorController) HandleCommandGetComments(comm *communication.GetComments, serv *Server) {
+	serv.PageManager.MoveMemberToPage(c, comm.Url, serv)
+	if c.Page != nil {
+		c.Page.GetComments(c)
+	} else {
+		c.AddMessage(false, fmt.Sprintf("Couldn't get comments for %s", comm.Url))
+	}
+}
+
 /** HandleCommandGetComments on an admin controller calls the appropriate functions on a pagemanager and page so that they can maintain which members and which guests are present. */
 func (c *AdminController) HandleCommandGetComments(comm *communication.GetComments, serv *Server) {
 	serv.PageManager.MoveMemberToPage(c, comm.Url, serv)
